kuard/ingress/kuard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard-ingress
spec:
  rules:
  - host: kuard.vdoubleb.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kuard
            port:
              number: 80
#  tls:
#    - hosts:
#        - kuard.vdoubleb.com
#    secretName: kuard-tls-secret
